trivial sbt 0.13 plugin test